--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">뽀듬</string>
+    <string name="kakao_app_key">b33daec53794a5396dee77698df5fad2</string>
 </resources>
